# advent-of-code-2022-haskell

./: README.md  aoc2022.cabal  aoc2025.cabal
.devcontainer/: devcontainer.json
app/: RunDay07.hs  RunDay11.hs  RunDay11Part2.hs
src/: Day07.hs  Day11.hs
test/: Day07Spec.hs  Day11Spec.hs  Spec.hs
