cabal-version:       2.2

name:                aoc2022
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs: src
  exposed-modules: Day11
  build-depends: base >= 4.7 && < 5, containers
  default-language: Haskell2010


executable day11
  main-is: RunDay11.hs
  hs-source-dirs: app
  build-depends: base, aoc2022
  default-language: Haskell2010

executable day11part2
  main-is: RunDay11Part2.hs
  hs-source-dirs: app
  build-depends: base, aoc2022
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/aoc2022

test-suite aoc2022-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Day11Spec
  build-depends:
      base >= 4.7 && < 5,
      aoc2022,
      hspec,
      hspec-discover
  default-language: Haskell2010
